# aster

./: .gitignore  CMakeLists.txt  aster.pro  conanfile.txt  deps-graph.sh  deps-insstall.py  install-deps.sh  notes.txt
src/: main.cpp
src/aster/: CMakeLists.txt  main.cpp
src/common/: game_config.cpp  game_config.h  game_window.cpp  game_window.h  logger.h  math_utils.cpp  math_utils.h  src.cmake  string.h
src/components/: cmp_basic.cpp  cmp_basic.h  cmp_render.cpp  cmp_render.h  src.cmake
src/engine/: CMakeLists.txt
src/engine/common/: CMakeLists.txt  defines.h  file_system.cpp  file_system.h  game_config.cpp  game_config.h  game_window.cpp  game_window.h  math_utils.cpp  math_utils.h
src/engine/components/: CMakeLists.txt  cmp_basic.cpp  cmp_basic.h  cmp_render.cpp  cmp_render.h
src/engine/render/: CMakeLists.txt  camera.h  camera_2d.cpp  camera_2d.h  camera_3d.cpp  camera_3d.h  i_camera.h  shader.h
src/engine/scenes/: CMakeLists.txt  scn_asteroids.cpp  scn_asteroids.h  scn_obs.cpp  scn_obs.h
src/engine/systems/: CMakeLists.txt  sys_basic.cpp  sys_render.cpp  sys_render.h
src/playground/ogles/: CMakeLists.txt  camera.h  main.cpp  shader.cpp  shader.h
src/playground/ogles/stb-image/: CMakeLists.txt
src/refl/: refl_json.cpp  refl_json.h  refl_lua.cpp  refl_lua.h  src.cmake
src/scenes/: asteroids_scene.cpp  asteroids_scene.h  i_scene.h  scn_asteroids.cpp  scn_asteroids.h  src.cmake
src/systems/: src.cmake  sys_basic.cpp  sys_basic.h  sys_render.cpp  sys_render.h
src/tests/: CMakeLists.txt  main.cpp  src.cmake  test_file_system.cpp  test_lua.cpp  test_lua.h  test_refl.cpp  test_rttr.cpp  test_rttr.h  test_sol2.cpp
